# crosspoint-reader

./: .CLAUDE.md  .claudeignore  .coderabbit.yaml  .gitignore  .gitmodules  .releaserc  AGENT-HANDOFF.md  ARCHITECTURE.md  CHANGES.md  CHERRY-PICKS-TODO.md  CODERABBIT_FIXES_COMPLETE.md  CODERABBIT_ISSUES_DETAILED.md  CRASH_FIX_APPLIED.md  FONT_CONTROLS.md  FONT_CONVERSION.md  FORK.MD  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  LAZY_LOAD_IMPLEMENTATION.md  MDsupport.MD  MERGE_RECOMMENDATIONS.md  OMNIVERSAL_EPUB_HANG.md  PDF.md  PINS.md  PLUGINS.md  PROJECT_INFO.md  README.md  SCOPE.md  SECURITY.md  TESTING_GUIDE.md  USER_GUIDE.md  WIP.md  audit-duplication.md  brute_force.py  build_output.txt  codex-handoff.md  declare_bold.py  english.dict.idx  final_fix.py  final_polish.py  (+15 more)
test/: CMakeLists.txt  HostTests.cpp  README  cover_skip_static_contracts.py  image_rendering_static_contracts.py  run_dict_html_renderer.sh  run_home_selector_memory_tests.sh  run_host_tests.sh  run_html_to_text_test.sh  run_incremental_section_tests.sh  run_perf_tests.sh  run_river_remainder_test.sh  run_unit_tests.sh  run_writer_cursor_test.sh  run_writer_text_slice_test.sh  run_writer_viewport_test.sh  run_writer_visible_lines_test.sh  run_writer_wrapped_layout_test.sh  test_harness.h
test/cjk_chapter/: CjkChapterTest.cpp  run_cjk_chapter_test.sh
test/cjk_layout/: CjkLineBreakTest.cpp  run_cjk_layout_test.sh
test/css/: CMakeLists.txt  CssLengthTest.cpp
test/css_parser/: CssParserTest.cpp  HalStorage.h
test/data/: generate_dictionaries.py  generate_dictionary_test_epub.py
test/data/dictionary-epub-chapters/: ch03_scanner_validation.html  ch04_preprocessing.html  ch05_per_book_override.html  ch13_multiword_lookup.html  ch15_edge_cases.html  ch18_expat_html_renderer.html  ch21_cspt_prefix_collisions.html  ch21_fpi_prefix_collisions.html  ch22_chained_oom_stress.html  ch23_hyphenated_word_navigation.html
test/data/dictionary-sources/: chain-stress.json  en-es.json  english-full.json  english-no-syn.json  fuzzy-fpi.json  html-definitions.json  ipa-phonetic.json  phrase.json  prep-all.json  prep-extract-dict.json  prep-fpi-prefix-collision.json  prep-gen-idx.json  prep-gen-syn.json  prep-long.json  prep-mini.json  prep-syn-two-step.json
test/dict-engine/: CMakeLists.txt  DictEngineTest.cpp  uzlib_zlib_checksums.c
test/dict-html-renderer/: CMakeLists.txt  DictHtmlRendererTest.cpp
test/dict-layout/: CMakeLists.txt  DictLayoutTest.cpp
test/dict-word-select-nav/: CMakeLists.txt  DictWordSelectNavigatorTest.cpp  run.sh
test/dict-word-select-nav/stubs/: GfxRenderer.h
test/dict_html_renderer/: DictHtmlRendererTest.cpp  README.md
test/dictionaries/all-prep/: all-prep.idx  all-prep.ifo  all-prep.syn.dz
test/dictionaries/basic/: basic.ifo
test/dictionaries/en-es/: en-es.idx.oft  en-es.ifo  en-es.syn.oft
test/dictionaries/expat-full/: expat-full.dict  expat-full.idx  expat-full.idx.oft  expat-full.ifo
test/dictionaries/extract-dict/: extract-dict.dict.dz  extract-dict.idx.oft  extract-dict.ifo
test/dictionaries/extract-syn-gen-syn/: extract-syn-gen-syn.ifo  extract-syn-gen-syn.syn.dz
test/dictionaries/fail-decompress/: fail-decompress.ifo
test/epub/: generate_kerning_ligature_epub.py  kerning_ligature_test.epub
test/epubs/: generate_kerning_ligature_epub.py  kerning_ligature_test.epub  test_dictionary.epub  test_hyphenation_focus_stress.epub  test_jpeg_images.epub  test_kerning_ligature.epub  test_layout_regressions.epub  test_list_rendering.epub  test_mixed_images.epub  test_multi_chapter_spine.epub  test_png_images.epub  test_supsub.epub  test_text_rendering.epub  test_thai.epub
test/fixtures/: generate_kerning_ligature_epub.py  kerning_ligature_test.epub
test/flat_map/: CMakeLists.txt  FlatMapTest.cpp
test/fs_helpers/: CMakeLists.txt  FsHelpersTest.cpp
test/html_to_text/: HtmlToTextTest.cpp
test/hyphenation_eval/: HyphenationEvaluationTest.cpp
test/incremental_section/: CleanScopeContractTest.sh  EpubIndexingPolicyTest.cpp  IncrementalSectionTypesTest.cpp  ReaderProgressPolicyTest.cpp  StaticIncrementalContracts.py  StatusPageInfoTest.cpp
test/koreader_xpath/: CMakeLists.txt  ChapterXPathResolverTest.cpp  Epub.h  Logging.h  Print.h
test/lookup-chain/: CMakeLists.txt  LookupChainTest.cpp
test/minibidi/: CMakeLists.txt  MiniBidiTest.cpp
test/mock/: Arduino.h  HalStorage.h  String.h  WString.h  WebServer.h
test/mocks/: GfxRenderer.h
test/native_settings/: test_settings_json.cpp
test/natural_sort/: CMakeLists.txt  NaturalSortTest.cpp
test/ota_version/: ota_version_host_test.cpp  run_ota_version_tests.sh
test/parsed_text/: ParsedTextTest.cpp
test/pdf/: pdf_parser_host_test.cpp  run_pdf_parser_tests.sh
test/perf/: CssParserBench.cpp  HyphenationBench.cpp  TextLayoutBench.cpp
test/reading_stats/: CMakeLists.txt  ReadingStatsTest.cpp
test/release_json_parser/: ReleaseJsonParserTest.cpp
test/river_remainder/: JustifyRemainderAllocator.cpp  JustifyRemainderAllocator.h  JustifyRemainderAllocatorTest.cpp
test/rss_parser/: RssParserTest.cpp
test/settings/: test_main.cpp
test/simulator_heap/: CMakeLists.txt  SimulatorHeapTest.cpp  SimulatorHeapTestShim.cpp
test/streaming_json_parser/: StreamingJsonParserTest.cpp
test/stubs/: Bitmap.h  BitmapHelpers.h  GfxRenderer.h  HalClock.h  HalStorage.h  HardwareSerial.h  Print.h  SDCardManager.h  SdFat.h  WString.h
test/test_preview/: test_preview.cpp
test/test_preview_casino/: test_preview_casino.cpp
test/theme_layout/: CMakeLists.txt  ThemeLayoutTest.cpp
test/toc_nav_parser/: CMakeLists.txt  TocNavParserTest.cpp
test/unit/: BlockStyleTest.cpp  CssParserRegressionTest.cpp  CssParserTest.cpp  HyphenationRegressionTest.cpp  OpdsParserTest.cpp  SerializationTest.cpp  StringUtilsTest.cpp  TextLayoutTest.cpp  UrlUtilsTest.cpp  Utf8Test.cpp
test/writer_cursor/: WriterCursorTest.cpp
test/writer_text_slice/: WriterTextSliceTest.cpp
test/writer_viewport/: WriterViewportTest.cpp
test/writer_visible_lines/: WriterVisibleLinesTest.cpp
test/writer_wrapped_layout/: WriterWrappedLayoutTest.cpp
(+1686 files in other folders)
